[project]
name = "103"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4==4.12.2",
    "folium>=0.19.5",
    "geopy>=2.4.1",
    "huggingface-hub==0.19.4",
    "matplotlib==3.8.2",
    "networkx==3.2.1",
    "numpy>=1.26.0",
    "pandas>=2.2.3",
    "pip>=25.0.1",
    "requests>=2.32.3",
    "scikit-learn==1.3.2",
    "sentence-transformers==2.2.2",
    "spacy>=3.8.5",
    "textacy>=0.13.0",
    "tqdm>=4.67.1",
]
